--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,6 @@ license = "MIT"
 repository = "https://github.com/MatthewThompson/BlueBGG"
 
 [dependencies]
-arnak = "0.1.0"
-serenity = "0.12"
-tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+arnak = { path = "../arnak" }
+poise = "0.6.1"
+tokio = "1"
